--- a/style.css
+++ b/style.css
@@ -29,9 +29,22 @@
     flex-wrap: wrap;
 }
 
-.weather-card{
+.weather-card {
     margin: 15px;
     border: 1px black solid;
     min-width: 200px;
+}
+
+button {
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
 }
 
